--- a/src/styles/Events.module.css
+++ b/src/styles/Events.module.css
@@ -8,7 +8,6 @@
   color: #111;
   font-family: 'Raleway';
   background-color:white;
-  font-family: 'raleway';
 }
 .main h1 {
   font-family: 'raleway';
@@ -69,3 +68,16 @@
   align-items: center;
 }
 
+.detail_container {
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  font-family: 'Raleway';
+  justify-content: flex-start;
+  align-items: center;
+  min-height: 100vh;
+}
+
+.detail_content {
+  margin-top: 380px;
+}
