--- a/src/styles/Comps.module.css
+++ b/src/styles/Comps.module.css
@@ -334,10 +334,11 @@ margin: 5px 0;
   border-radius: 60px;
 }
 
-.profile_container hr {
+.profile_divider {
   border-top: 0.75px solid #9f9f9f;
   margin: 0px 0 10px 0;
   width: 100%;
+  height: 2px;
 }
 
 .commentList_inner{
